--- a/OneListApplication/OneListApplication/packages.config
+++ b/OneListApplication/OneListApplication/packages.config
@@ -35,4 +35,5 @@
   <package id="Modernizr" version="2.6.2" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
+  <package id="recaptcha" version="1.0.5.0" targetFramework="net452" />
 </packages>
