--- a/OneListApplication/OneListApplication/OneListApplication.csproj
+++ b/OneListApplication/OneListApplication/OneListApplication.csproj
@@ -253,16 +253,16 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="AspNetRole.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
+      <DependentUpon>OneListCA.tt</DependentUpon>
     </Compile>
     <Compile Include="AspNetUser.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
+      <DependentUpon>OneListCA.tt</DependentUpon>
     </Compile>
     <Compile Include="AspNetUserClaim.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
+      <DependentUpon>OneListCA.tt</DependentUpon>
     </Compile>
     <Compile Include="AspNetUserLogin.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
+      <DependentUpon>OneListCA.tt</DependentUpon>
     </Compile>
     <Compile Include="Business Logic\CookieHelper.cs" />
     <Compile Include="Controllers\AdminController.cs" />
@@ -275,34 +275,34 @@
     <Compile Include="Controllers\ProfileController.cs" />
     <Compile Include="Controllers\SubscriberController.cs" />
     <Compile Include="Coupon.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
+      <DependentUpon>OneListCA.tt</DependentUpon>
     </Compile>
     <Compile Include="C__MigrationHistory.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
+      <DependentUpon>OneListCA.tt</DependentUpon>
     </Compile>
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Item.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
+      <DependentUpon>OneListCA.tt</DependentUpon>
     </Compile>
     <Compile Include="ItemCategory.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
+      <DependentUpon>OneListCA.tt</DependentUpon>
     </Compile>
     <Compile Include="List.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
+      <DependentUpon>OneListCA.tt</DependentUpon>
     </Compile>
     <Compile Include="ListItem.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
+      <DependentUpon>OneListCA.tt</DependentUpon>
     </Compile>
     <Compile Include="ListStatu.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
+      <DependentUpon>OneListCA.tt</DependentUpon>
     </Compile>
     <Compile Include="ListType.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
+      <DependentUpon>OneListCA.tt</DependentUpon>
     </Compile>
     <Compile Include="ListUser.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
+      <DependentUpon>OneListCA.tt</DependentUpon>
     </Compile>
     <Compile Include="Model1.Context.cs">
       <AutoGen>True</AutoGen>
@@ -349,22 +349,31 @@
     <Compile Include="Repositories\ListRepo.cs" />
     <Compile Include="Repositories\SubscriberRepo.cs" />
     <Compile Include="Retail.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
+      <DependentUpon>OneListCA.tt</DependentUpon>
     </Compile>
     <Compile Include="Service\CaptchaHelper.cs" />
     <Compile Include="Service\SandGrid.cs" />
+    <Compile Include="sp_helpdiagramdefinition_Result.cs">
+      <DependentUpon>OneListCA.tt</DependentUpon>
+    </Compile>
+    <Compile Include="sp_helpdiagrams_Result.cs">
+      <DependentUpon>OneListCA.tt</DependentUpon>
+    </Compile>
     <Compile Include="Startup1.cs" />
     <Compile Include="SuscriberGroup.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
+      <DependentUpon>OneListCA.tt</DependentUpon>
     </Compile>
     <Compile Include="SuscriberGroupUser.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
+      <DependentUpon>OneListCA.tt</DependentUpon>
+    </Compile>
+    <Compile Include="sysdiagram.cs">
+      <DependentUpon>OneListCA.tt</DependentUpon>
     </Compile>
     <Compile Include="User.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
+      <DependentUpon>OneListCA.tt</DependentUpon>
     </Compile>
     <Compile Include="UserType.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
+      <DependentUpon>OneListCA.tt</DependentUpon>
     </Compile>
     <Compile Include="ViewModels\ItemCategoryList.cs" />
     <Compile Include="ViewModels\ItemCategoryVM.cs" />
