--- a/OneListApplication/OneListApplication/OneListApplication.csproj
+++ b/OneListApplication/OneListApplication/OneListApplication.csproj
@@ -412,8 +412,8 @@
     <Content Include="Views\Profile\Index.cshtml" />
     <Content Include="Views\Profile\ChangePassword.cshtml" />
     <Content Include="Views\Admin\Index.cshtml" />
-    <Content Include="Views\Item\CreateItemGroup.cshtml" />
-    <Content Include="Views\Item\ItemGroupManagement.cshtml" />
+    <Content Include="Views\Item\old\CreateItemGroup.cshtml" />
+    <Content Include="Views\Item\old\ItemGroupManagement.cshtml" />
     <Content Include="Views\Item\ItemManagement.cshtml" />
     <Content Include="Views\List\CreateList.cshtml" />
     <Content Include="Views\List\ShowCompleteList.cshtml" />
