--- a/OneListApplication/OneListApplication/OneListApplication.csproj
+++ b/OneListApplication/OneListApplication/OneListApplication.csproj
@@ -208,6 +208,7 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="images\ad.png" />
+    <Content Include="images\geometry2.png" />
     <Content Include="images\logo.png" />
     <Content Include="images\paul_mills.jpg" />
     <Content Include="Model1.Context.tt">
@@ -419,7 +420,6 @@
     <Content Include="Views\List\ShowCompleteList.cshtml" />
     <Content Include="Views\List\ShowListDetails.cshtml" />
     <Content Include="Views\List\ShowSubscribedList.cshtml" />
-    <Content Include="Views\Subscriber\EditSubGroup.cshtml" />
     <Content Include="Views\Item\ItemDetail.cshtml" />
     <Content Include="Views\Item\old\ItemGroupDetail.cshtml" />
     <Content Include="Views\List\EditList.cshtml" />
