--- a/OneListApplication/OneListApplication/Web.config
+++ b/OneListApplication/OneListApplication/Web.config
@@ -72,9 +72,11 @@
     <validation validateIntegratedModeConfiguration="false" />
     <modules>
       <remove name="ApplicationInsightsWebTracking" />
+      <remove name="WebDAVModule" />
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" preCondition="managedHandler" />
     </modules>
   <handlers>
+      <remove name="WebDAV" />
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
       <remove name="OPTIONSVerbHandler" />
       <remove name="TRACEVerbHandler" />
