--- a/OneListApplication/OneListApplication/OneListApplication.csproj
+++ b/OneListApplication/OneListApplication/OneListApplication.csproj
@@ -190,6 +190,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="App_Data\Master SQL\MasterSQLOneListCA.sql" />
+    <Content Include="App_Data\Select SQL\query.sql" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
